--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
     networks:
       - traefik-public
     volumes:
-      - "./web/nginx.conf:/etc/nginx/nginx.conf:ro"
+      - "./nginx.conf:/etc/nginx/nginx.conf:ro"
       - "./build/:/usr/share/nginx/html:ro"
 
 networks:
