--- a/nginx.conf
+++ b/nginx.conf
@@ -18,7 +18,7 @@ http {
     add_header X-Content-Type-Options nosniff;
     add_header X-XSS-Protection "1; mode=block";
     add_header Strict-Transport-Security "max-age=31536000; includeSubdomains; always";
-    add_header Content-Security-Policy "default-src 'self'; connect-src 'self' https://womfront.spionsatellit.com; style-src 'self' *.googleapis.com womfront.spionsatellit.com; font-src 'self' *.gstatic.com" always;
+    add_header Content-Security-Policy "default-src 'self'; connect-src 'self' *.spionsatellit.com; style-src 'self' *.googleapis.com *.spionsatellit.com; font-src 'self' *.gstatic.com" always;
     
     log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
                       '$status $body_bytes_sent "$http_referer" '
