--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,17 @@
 version: "3.9"
 services:
-  wom-frontend:
+  wom_frontend:
     image: nginx:alpine
-    container_name: "wom-frontend"
+    container_name: "wom_frontend"
     restart: always
     labels:
       - "traefik.enable=true"
-      - "traefik.http.wom-frontend.rule=Host(`womfront.spionsatellit.com`)"
-      - "traefik.http.wom-frontend.tls.domains[0].main=womfront.spionsatellit.com"
-      - "traefik.http.wom-frontend.entrypoints=websecure"
-      - "traefik.http.wom-frontend.tls=true"
-      - "traefik.http.wom-frontend.tls.certresolver=myresolver"
-      - "traefik.http.wom-frontend.tls.options=wom-frontend@file"
+      - "traefik.http.routers.wom-frontend.rule=Host(`womfront.spionsatellit.com`)"
+      - "traefik.http.routers.wom-frontend.tls.domains[0].main=womfront.spionsatellit.com"
+      - "traefik.http.routers.wom-frontend.entrypoints=websecure"
+      - "traefik.http.routers.wom-frontend.tls=true"
+      - "traefik.http.routers.wom-frontend.tls.certresolver=myresolver"
+      - "traefik.http.routers.wom-frontend.tls.options=wom-frontend@file"
       - "traefik.http.middlewares.wom-frontend-compression.compress=true"
       - "traefik.http.routers.wom-frontend.middlewares=wom-frontend-compression"
     networks:
